--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+
+
 body {
   padding: 0;
   margin: 0;
@@ -12,7 +14,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+html{
+  font-size: 16px;
+}
 .App {
   text-align: center;
 }
@@ -51,5 +55,4 @@ code {
     transform: rotate(360deg);
   }
 }
-
 
