#58 Api post new user

--- a/src/components/Admin/AdminPage.scss
+++ b/src/components/Admin/AdminPage.scss
@@ -18,6 +18,13 @@
         }
         .admin-content{
             padding-left: 2em;
+
+            .btn-add-new-user{
+                display: flex;
+                gap: 5px;
+                align-items: center;
+                justify-content: center;
+            }
         }
     }
 
