--- a/src/components/User/User.scss
+++ b/src/components/User/User.scss
@@ -6,6 +6,10 @@
     flex-wrap: wrap;
     height: 300px;
     .card{
+        &:hover{
+            cursor: pointer;
+            border: 2px solid #34ad26;
+        }
         max-width: 250px;
         .card-body{
             position: absolute;
